# but_now_pay_later_project

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  hf_README.md  hf_requirements.txt  pyproject.toml  render.yaml  requirements-serve.txt  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml  deploy_hf.yml  monitoring.yml  retrain.yml
config/: __init__.py  base.yaml  dev.yaml  features.yaml  logging.yaml  model_params.yaml  prod.yaml  render.yaml  settings.py  staging.yaml  thresholds.yaml
dashboard/: __init__.py  app.py
dashboard/components/: charts.py  tables.py
dashboard/pages/: 1_overview.py  2_drift_report.py  3_business_metrics.py  4_alert_history.py
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
docs/: api.md  architecture.md  runbook.md
docs/decisions/: 0001-temporal-split.md
examples/: edge_case_applicant.json  high_risk_applicant.json  low_risk_applicant.json  sample_input.json
models/: challenger_lgbm.pkl  challenger_metadata.json  champion_metadata.json  champion_xgboost.pkl
notebooks/: 01_data_exploration.ipynb  02_data_preparation.ipynb  02_feature_selection.ipynb  03_data_preparation.ipynb  03_model_training.ipynb  04_model_evaluation.ipynb  04_model_training.ipynb  05_model_serving.ipynb
reports/: ab_test_results.json  data_prep_config.json  feature_selection_table.csv  monitoring_log.json
scripts/: download_data.sh  run_ab_test.py  run_monitoring.py  run_retraining.py  run_training.py  smoke_test_foundation.py
src/bnpl/: __init__.py  main.py
src/bnpl/data/: __init__.py  cleaner.py  loader.py  splitter.py  validator.py
src/bnpl/features/: __init__.py  encoder.py  imputer.py  leakage.py  pipeline.py
src/bnpl/logger/: __init__.py  custom_logger.py  decorators.py  logger_config.py
src/bnpl/models/: __init__.py  evaluate.py  explain.py  predictor.py  registry.py  threshold.py  train.py  tune.py
src/bnpl/monitoring/: __init__.py  ab_analyzer.py  business_metrics.py  classifier.py  data_validator.py  drift_detector.py
src/bnpl/pipelines/: __init__.py  data_pipeline.py  evaluation_pipeline.py  monitoring_pipeline.py  retraining_pipeline.py  training_pipeline.py
src/bnpl/serving/: __init__.py  ab_router.py  api.py  inference.py  middleware.py  schemas.py
src/bnpl/tracking/: __init__.py  mlflow_utils.py
tests/: conftest.py  test_ab_router.py  test_preprocessing.py
tests/unit/: test_config.py  test_logger.py  test_mlflow_utils.py
