[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bnpl"
version = "0.1.0"
description = "BNPL Default Prediction ML System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Prasanth Gururaj", email = "prasanth4254@gmail.com"},
]
dependencies = [
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "pyyaml>=6.0,<7",
    "pandas>=2.2,<3",
    "pyarrow>=17.0",
    "numpy>=1.26,<3",
    "scikit-learn>=1.5,<2",
    "xgboost>=2.0,<3",
    "lightgbm>=4.0,<5",
    "optuna>=3.6,<4",
    "shap>=0.45",
    "mlflow>=2.14,<3",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "httpx>=0.27",
    "streamlit>=1.36,<2",
    "plotly>=5.22,<6",
    "colorlog>=6.8,<7",
    "python-dotenv>=1.0,<2",
    "evidently>=0.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1",
    "black>=24.4,<25",
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<4",
]
test = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "pytest-mock>=3.14,<4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bnpl"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v --tb=short"
